<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="2dp">

    <!-- Activity Time block -->
    <TextView
        android:id="@+id/activityTime"
        android:text="Activity Time"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/activityName"
        android:text="Activity Name"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingStart="5dp" />

    <TextView
        android:id="@+id/duration"
        android:text="Duration"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="5dp" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update"
        android:backgroundTint="@color/green"
        android:textSize="12sp"
        android:layout_marginStart="5dp"
        android:padding="2dp" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:backgroundTint="@color/red"
        android:textSize="12sp"
        android:layout_marginStart="2dp"
        android:padding="2dp" />
</LinearLayout>
