<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/filterByDateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Filter by Date" />

    <Button
        android:id="@+id/addActivityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Activity" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"/>
</LinearLayout>
